# picnrec-py

./: .gitignore  LICENSE  PROTOCOL_SPEC.md  README.md  pyproject.toml
picnrec/: cli.py  core.py  gui.py
